AJS-2 worked on role management

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/styles/openwms-light.css
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/styles/openwms-light.css
@@ -67,6 +67,12 @@ body {
 .named-div {
     background-color: #c9dcea;
 }
+.checked {
+    background-color: #1e347b;
+}
+.unchecked {
+    background-color: transparent;
+}
 
 
 .header-menu {
