--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/styles/openwms.css
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/styles/openwms.css
@@ -29,22 +29,6 @@ body {
 /*    font-size: 11px; */
 }
 
-.header-area {
-    background-color: #c9dcea;
-    background-image: url("../images/openwms_header.png");
-    background-repeat: no-repeat;
-    width: auto;
-    height: 66px;
-    padding: 10px 0px 10px 0px;
-    margin: 10px 20px 15px 20px;
-}
-
-.content-area {
-    width: auto;
-    padding: 10px 0px 10px 0px;
-    margin: 10px 20px 15px 20px;
-}
-
 /*
    Button Bar
 */
@@ -56,7 +40,7 @@ body {
 /*
    Navi Leiste
  */
-.navbar-inner {
+.navbar {
     min-height: 0px;
 }
 
@@ -144,17 +128,19 @@ body {
     padding-left: 5px;
 }
 
-
-
+.header-area {
+    background-color: #c9dcea;
+    background-image: url("../images/openwms_header.png");
+    background-repeat: no-repeat;
+    height: 66px;
+    margin: 10px auto 0px auto;
+    border: 1px solid transparent;
+}
 
 
 
 .header-menu {
-    background-image: url("../images/breadcrumbs.jpg");
-    background-repeat: repeat;
-    width: auto;
     height: 25px;
-    top: 56px;
     position: relative;
 }
 
@@ -211,3 +197,28 @@ body {
 	horizontalAlign: "left";
 }
 
+.content-area {
+    width: auto;
+    padding: 10px 0px 10px 0px;
+    margin: 10px 20px 15px 20px;
+}
+
+
+/* Addon for UI-Bootstrap */
+.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
+
+.modal {
+    display: block;
+    height: 0;
+    overflow: visible;
+}
+.modal-body:before,
+.modal-body:after {
+    display: table;
+    content: " ";
+}
+.modal-header:before,
+.modal-header:after {
+    display: table;
+    content: " ";
+}
