--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/main.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/main.html
@@ -1,19 +1,9 @@
-<div class="header-area container">
-    <div class="header-menu container">
-        <div class="navbar">
-            <div class="navbar-inner">
-                <div class="container" ui-view="header-view">
-                </div>
-            </div>
-        </div>
-    </div>
+<div class="container">
+    <div class="header-area navbar-default "></div>
 </div>
-
-
-<div class="container-fluid">
-    <div class="content-area row-fluid">
-
+<div class="container header-menu navbar container" ui-view="header-view" />
+<div class="container">
+    <div class="content-area row">
         <div ui-view/>
-
     </div>
 </div>
