--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/no-tree.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/no-tree.html
@@ -1,5 +1,6 @@
-<!-- Content Pane  -->
+<!-- Content Pane
 <toaster-container toaster-options="{'positionClass': 'toast-top-full-width', 'showDuration': '000', 'hideDuration': '5000', 'timeOut': '500', 'extendedTimeOut': '5000', 'showEasing': 'swing', 'hideEasing': 'linear', 'showMethod': 'fadeIn', 'hideMethod': 'fadeOut'}"></toaster-container>
+-->
 <div class="span12" ui-view="content-view">
 
 </div>
