--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/partials/default-header.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/partials/default-header.html
@@ -1,9 +1,26 @@
-<ul class="nav">
-    <li>
-        <div class="dropdown"><button class="btn dropdown-toggle sr-only" type="button" id="dropdownMenu1" data-toggle="dropdown">
-            Application
-            <span class="caret"></span>
-        </button>
+<nav class="navbar navbar-default" role="navigation">
+    <!-- Brand and toggle get grouped for better mobile display -->
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <!--ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Link</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">Separated link</a></li>
+                </ul>
+            </li>
+        </ul-->
+<ul class="nav navbar-nav">
+    <li class="dropdown">
+            <button class="btn btn-default navbar-btn dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown">Application
+                <span class="caret"></span>
+            </button>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
                 <li ng-class="{active : linkActive == 'users'}" role="presentation">
                     <a role="menuitem" tabindex="-1" ng-href="#/users" ng-click="clickCoreMenuItem()">
@@ -61,6 +78,7 @@
                     </a>
                 </li>
             </ul>
-        </div>
     </li>
 </ul>
+    </div><!-- /.navbar-collapse -->
+</nav>
