--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/roles.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/roles.html
@@ -1,138 +1,129 @@
-<!--script type="application/javascript" charset="utf-8">
-    $.extend( $.fn.dataTableExt.oStdClasses, {
-        "sSortAsc": "header headerSortDown",
-        "sSortDesc": "header headerSortUp",
-        "sSortable": "header"
-    } );
-    $(document).ready(function() {
-        $('#rolesTable').dataTable( {
-            "sDom": "<'row'<'span8'l><'span8'f>r>t<'row'<'span8'i><'span8'p>>",
-            "sPaginationType": "bootstrap",
-            "oLanguage": {
-                "sLengthMenu": "_MENU_ records per page"
-            }
-        } );
-    } );
-</script-->
-<script type="text/ng-template" id="addRolesDlg.html">
-    <div class="modal-header">
-        <h3>{{dialog.title}}</h3>
-    </div>
-    <div class="modal-body">
-        <form class="form-horizontal" role="form">
-        <div class="form-group">
-            <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
-            <div class="col-sm-10">
-                <input type="text" ng-model="role.name" class="form-control" id="inputEmail3" placeholder="">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="inputPassword3" class="col-sm-2 control-label">Description</label>
-            <div class="col-sm-10">
-                <input type="text" ng-model="role.description" class="form-control" id="inputPassword3" placeholder="">
-            </div>
-        </div>
-        </form>
-    </div>
-    <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="ok()">OK</button>
-        <button class="btn" ng-click="cancel()">Cancel</button>
-    </div>
-</script>
 <div class="row subheader-button-area">
+    <script type="text/ng-template" id="addRolesDlg.html">
+        <div class="modal-header">
+            <h3>{{dialog.title}}</h3>
+        </div>
+        <div class="modal-body">
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="role.name" class="form-control" id="inputEmail3" placeholder="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword3" class="col-sm-2 control-label">Description</label>
+
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="role.description" class="form-control" id="inputPassword3" placeholder="">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-default" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
+
     <div class="row-fluid">
         <div class=""><h2>Role Management</h2></div>
         <div class="button-bar">
-            <a ng-click="addRole()" class="btn">
+            <a ng-click="addRole()" class="btn btn-default">
                 <img src="../images/dialogs/role/Users--plus.png" class="pull-left"/>
             </a>
-            <a ng-click="deleteRole($scope, $http)" class="btn">
+            <a ng-click="deleteRole($scope, $http)" class="btn btn-default">
                 <img src="../images/dialogs/role/Users--minus.png" class="pull-left"/>
             </a>
-            <a ng-click="saveRole($scope, $http)" class="btn">
+            <a ng-click="saveRole($scope, $http)" class="btn btn-default">
                 <img src="../images/dialogs/role/Users--save.png" class="pull-left"/>
             </a>
-            <a ng-click="loadRoles($scope, $http)" class="btn">
+            <a ng-click="loadRoles($scope, $http)" class="btn btn-default">
                 <img src="../images/core/refresh.png" class="pull-left"/>
             </a>
         </div>
     </div>
 </div>
-<div class="row">
-    <div class="span10">
-        <table id="rolesTable" cellpadding="0" cellspacing="0" border="0"
-               class="table table-striped table-bordered table-hover table-condensed">
-            <thead>
-            <tr>
-                <th style="width: 5%" class="named-div"></th>
-                <th style="width: 20%" class="named-div">Role name</th>
-                <th style="width: 75%" class="named-div">Description</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="role in roleEntities">
-                <td><button type="button" class="btn btn-default btn-lg" ng-click="editRole($index)"><span class="glyphicon glyphicon-star"></span> Star</button></td>
-                <td ng-click="onRoleSelected($index)">{{role.name}}</td>
-                <td ng-click="onRoleSelected($index)">{{role.description}}</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
-<div style="margin-top: 5px" class="row">
-    <div class="span5">
-        <div class="row" style="margin-left:0px;margin-top: 5px">
-            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
+<toaster-container toaster-options="{'time-out': 3000}">
+    <div class="row">
+        <div class="span10">
+            <table id="rolesTable" cellpadding="0" cellspacing="0" border="0"
+                   class="table table-striped table-bordered table-hover table-condensed">
                 <thead>
+                <tr>
+                    <th class="named-div"></th>
+                    <th style="width: 20%" class="named-div">Role name</th>
+                    <th style="width: 80%" class="named-div">Description</th>
+                    <th class="named-div"></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="role in roleEntities">
+                    <td><i ng-class="roleStyleClass($index)" ng-click="onRoleChecked($index)"></i></td>
+                    <td ng-click="onRoleSelected($index)" ng-dblclick="editRole($index)">{{role.name}}</td>
+                    <td ng-click="onRoleSelected($index)" ng-dblclick="editRole($index)">{{role.description}}</td>
+                    <td><i class="glyphicon glyphicon-pencil" ng-click="editRole($index)"></i></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <div style="margin-top: 5px" class="row">
+        <div class="span5">
+            <div class="row" style="margin-left:0px;margin-top: 5px;margin-right: 0px">
+                <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
+                    <thead>
                     <tr>
                         <th style="width: 20%" class="named-div"><span>Assigned Grants
                             <a ng-click="addRole($scope, $http)">
-                            <img src="../images/dialogs/role/grant--add.png" class="btn pull-right"/>
-                        </a></span></th>
+                                <img src="../images/dialogs/role/grant--add.png" class="btn pull-right"/>
+                            </a></span></th>
                     </tr>
-                </thead>
-                <tbody>
+                    </thead>
+                    <tbody>
                     <tr ng-repeat="grant in grants">
                         <td>{{grant.description}}</td>
                     </tr>
-                </tbody>
-                <tfoot>
-                   <tr>
-                       <th>
-                           <ul class="pager">
-                               <li class="previous {{prevButton.hidden == true && 'disabled' || ''}}" ng-if="prevButton.enabled">
-                                   <a ng-click="previousGrantsPage()" ng-if="!prevButton.hidden">Previous</a>
-                                   <span ng-if="prevButton.hidden">Previous</span>
-                               </li>
-                               <li class="next {{nextButton.hidden == true && 'disabled' || ''}}" ng-if="nextButton.enabled">
-                                   <a ng-click="nextGrantsPage()" ng-if="!nextButton.hidden">Next</a>
-                                   <span ng-if="nextButton.hidden">Next</span>
-                               </li>
-                           </ul>
-                       </th>
-                   </tr>
-                </tfoot>
-            </table>
+                    </tbody>
+                    <tfoot>
+                    <tr>
+                        <th>
+                            <ul class="pager">
+                                <li class="previous {{prevButton.hidden == true && 'disabled' || ''}}" ng-if="prevButton.enabled">
+                                    <a ng-click="previousGrantsPage()" ng-if="!prevButton.hidden">Previous</a>
+                                    <span ng-if="prevButton.hidden">Previous</span>
+                                </li>
+                                <li class="next {{nextButton.hidden == true && 'disabled' || ''}}" ng-if="nextButton.enabled">
+                                    <a ng-click="nextGrantsPage()" ng-if="!nextButton.hidden">Next</a>
+                                    <span ng-if="nextButton.hidden">Next</span>
+                                </li>
+                            </ul>
+                        </th>
+                    </tr>
+                    </tfoot>
+                </table>
+            </div>
+        </div>
+        <div class="span5">
+            <div class="row" style="margin-left:0px;margin-top: 5px;margin-right: 0px">
+                <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
+                    <thead>
+                    <tr>
+                        <th style="width: 20%" class="named-div">Assigned Users <a ng-click="addRole($scope, $http)">
+                            <img src="../images/dialogs/role/User--plus.png" class="btn pull-right"/>
+                        </a> <a ng-click="addRole($scope, $http)">
+                            <img src="../images/dialogs/role/User--minus.png" class="btn pull-right"/>
+                        </a></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="user in selectedRole.users">
+                        <td>{{user.fullname}} ({{user.username}})</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-    <div class="span5">
-        <div class="row" style="margin-left:0px;margin-top: 5px">
-            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
-                <thead>
-                <tr>
-                    <th style="width: 20%" class="named-div">Assigned Users <a ng-click="addRole($scope, $http)">
-                        <img src="../images/dialogs/role/User--plus.png" class="btn pull-right"/>
-                    </a> <a ng-click="addRole($scope, $http)">
-                        <img src="../images/dialogs/role/User--minus.png" class="btn pull-right"/>
-                    </a></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="user in selectedRole.users">
-                    <td>{{user.fullname}} ({{user.username}})</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-</div>
+</toaster-container>
