--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/no-tree.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/no-tree.html
@@ -1,5 +1,16 @@
 <!-- Content Pane -->
-<toaster-container toaster-options="{'positionClass': 'toast-top-left', 'showDuration': '10000', 'hideDuration': '10000', 'timeOut': '2000', 'extendedTimeOut': '10000', 'showEasing': 'swing', 'hideEasing': 'linear', 'showMethod': 'fadeIn', 'hideMethod': 'fadeOut'}"></toaster-container>
+<toaster-container
+        toaster-options="{
+            'positionClass': 'toast-top-left',
+            'showDuration': '10000',
+            'hideDuration': '10000',
+            'timeOut': '10000',
+            'extendedTimeOut': '10000',
+            'showEasing': 'swing',
+            'hideEasing': 'linear',
+            'showMethod': 'fadeIn',
+            'hideMethod': 'fadeOut'}">
+</toaster-container>
 <div class="span12" ui-view="content-view">
 
 </div>
