--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/partials/default-header.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/partials/default-header.html
@@ -24,23 +24,20 @@
             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
                 <li ng-class="{active : linkActive == 'users'}" role="presentation">
                     <a role="menuitem" tabindex="-1" ng-href="#/users" ng-click="clickCoreMenuItem()">
-                        <img src="images/navi/users.png" class="img-rounded">
-                            <span id="usersLbl" class="left-padded5">Users</span>
-                        </img>
+                        <i class="users pull-left"></i>
+                        <span id="usersLbl" class="left-padded5">Users</span>
                     </a>
                 </li>
                 <li ng-class="{active : linkActive == 'roles'}" role="presentation">
                     <a role="menuitem" tabindex="-1" ng-href="#/roles" ng-click="clickCoreMenuItem()">
-                        <img src="images/navi/roles.png" class="img-rounded">
-                            <span class="left-padded5">Roles</span>
-                        </img>
+                        <i class="roles pull-left"></i>
+                        <span class="left-padded5">Roles</span>
                     </a>
                 </li>
                 <li tabindex="-1" ng-class="{active : linkActive == 'modules'}" role="presentation">
                     <a role="menuitem" ng-href="#/modules" ng-click="clickCoreMenuItem()">
-                        <img src="images/navi/modules.png" class="img-rounded">
-                            <span class="left-padded5">Modules</span>
-                        </img>
+                        <i class="modules pull-left"></i>
+                        <span class="left-padded5">Modules</span>
                     </a>
                 </li>
                 <li role="presentation">
@@ -48,9 +45,8 @@
                 </li>
                 <li tabindex="-1" ng-class="{active : linkActive == 'preferences'}" role="presentation">
                     <a role="menuitem" ng-href="#/preferences" ng-click="clickCoreMenuItem()">
-                        <img src="images/navi/preferences.png" class="img-rounded">
-                            <span class="left-padded5">Preferences</span>
-                        </img>
+                        <i class="preferences pull-left"></i>
+                        <span class="left-padded5">Preferences</span>
                     </a>
                 </li>
                 <li role="presentation">
@@ -58,23 +54,20 @@
                 </li>
                 <li tabindex="-1" ng-class="{active : linkActive == 'help'}" role="presentation">
                     <a role="menuitem" ng-href="#/help" ng-click="clickCoreMenuItem()">
-                        <img src="images/navi/help.png" class="img-rounded">
-                            <span class="left-padded5">Help</span>
-                        </img>
+                        <i class="help pull-left"></i>
+                        <span class="left-padded5">Help</span>
                     </a>
                 </li>
                 <li tabindex="-1" ng-class="{active : linkActive == 'profile'}" role="presentation">
                     <a role="menuitem"  ng-href="#/profile" ng-click="clickCoreMenuItem()">
-                        <img src="images/navi/profiles.png" class="img-rounded">
-                            <span class="left-padded5">Profile</span>
-                        </img>
+                        <i class="profiles pull-left"></i>
+                        <span class="left-padded5">Profile</span>
                     </a>
                 </li>
                 <li tabindex="-1" ng-class="{active : linkActive == 'logout'}" role="presentation">
                     <a role="menuitem"  ng-href="#/logout" ng-click="logout()">
-                        <img src="images/navi/logout.png" class="img-rounded">
-                            <span class="left-padded5">Logout</span>
-                        </img>
+                        <i class="logout pull-left"></i>
+                        <span class="left-padded5">Logout</span>
                     </a>
                 </li>
             </ul>
