--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/roles.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/roles.html
@@ -7,12 +7,14 @@
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <label for="nameTxt" class="col-sm-2 control-label">Name</label>
+
                     <div class="col-sm-10">
                         <input type="text" ng-model="role.name" class="form-control" id="nameTxt" placeholder="">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="descriptionTxt" class="col-sm-2 control-label">Description</label>
+
                     <div class="col-sm-10">
                         <input type="text" ng-model="role.description" class="form-control" id="descriptionTxt" placeholder="">
                     </div>
@@ -43,83 +45,83 @@
         </div>
     </div>
 </div>
-    <div class="row">
-        <div class="span10">
-            <table id="rolesTable" cellpadding="0" cellspacing="0" border="0"
-                   class="table table-striped table-bordered table-hover table-condensed">
+<div class="row">
+    <div class="col-md-12 left-padded0 right-padded0">
+        <table id="rolesTable" cellpadding="0" cellspacing="0" border="0"
+               class="table table-striped table-bordered table-hover table-condensed">
+            <thead>
+            <tr>
+                <th class="named-div"></th>
+                <th style="width: 20%" class="named-div">Role name</th>
+                <th style="width: 80%" class="named-div">Description</th>
+                <th class="named-div"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="role in roleEntities">
+                <td><i ng-class="roleStyleClass($index)" ng-click="onRoleChecked($index)"></i></td>
+                <td ng-click="onRoleSelected($index)" ng-dblclick="editRole($index)">{{role.name}}</td>
+                <td ng-click="onRoleSelected($index)" ng-dblclick="editRole($index)">{{role.description}}</td>
+                <td><i class="glyphicon glyphicon-pencil" ng-click="editRole($index)"></i></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div style="margin-top: 5px" class="row">
+    <div class="col-md-6 left-padded0">
+        <div class="row" style="margin-left:0px;margin-top: 5px;margin-right: 0px">
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
                 <thead>
                 <tr>
-                    <th class="named-div"></th>
-                    <th style="width: 20%" class="named-div">Role name</th>
-                    <th style="width: 80%" class="named-div">Description</th>
-                    <th class="named-div"></th>
+                    <th style="width: 20%" class="named-div"><span>Assigned Grants
+                            <a ng-click="addRole($scope, $http)">
+                                <i class="grant--add pull-right"></i>
+                            </a></span></th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr ng-repeat="role in roleEntities">
-                    <td><i ng-class="roleStyleClass($index)" ng-click="onRoleChecked($index)"></i></td>
-                    <td ng-click="onRoleSelected($index)" ng-dblclick="editRole($index)">{{role.name}}</td>
-                    <td ng-click="onRoleSelected($index)" ng-dblclick="editRole($index)">{{role.description}}</td>
-                    <td><i class="glyphicon glyphicon-pencil" ng-click="editRole($index)"></i></td>
+                <tr ng-repeat="grant in grants">
+                    <td>{{grant.description}}</td>
+                </tr>
+                </tbody>
+                <tfoot>
+                <tr>
+                    <th>
+                        <ul class="pager">
+                            <li class="previous {{prevButton.hidden == true && 'disabled' || ''}}" ng-if="prevButton.enabled">
+                                <a ng-click="previousGrantsPage()" ng-if="!prevButton.hidden">Previous</a>
+                                <span ng-if="prevButton.hidden">Previous</span>
+                            </li>
+                            <li class="next {{nextButton.hidden == true && 'disabled' || ''}}" ng-if="nextButton.enabled">
+                                <a ng-click="nextGrantsPage()" ng-if="!nextButton.hidden">Next</a>
+                                <span ng-if="nextButton.hidden">Next</span>
+                            </li>
+                        </ul>
+                    </th>
+                </tr>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+    <div class="col-md-6 right-padded0">
+        <div class="row" style="margin-left:0px;margin-top: 5px;margin-right: 0px">
+            <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
+                <thead>
+                <tr>
+                    <th style="width: 20%" class="named-div">Assigned Users <a ng-click="addRole($scope, $http)">
+                        <i class="User--plus pull-right"></i>
+                    </a> <a ng-click="addRole($scope, $http)">
+                        <i class="Users--plus pull-right"></i>
+                    </a></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="user in selectedRole.users">
+                    <td>{{user.fullname}} ({{user.username}})</td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
-    <div style="margin-top: 5px" class="row">
-        <div class="span5">
-            <div class="row" style="margin-left:0px;margin-top: 5px;margin-right: 0px">
-                <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
-                    <thead>
-                    <tr>
-                        <th style="width: 20%" class="named-div"><span>Assigned Grants
-                            <a ng-click="addRole($scope, $http)">
-                                <i class="grant--add pull-right"></i>
-                            </a></span></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="grant in grants">
-                        <td>{{grant.description}}</td>
-                    </tr>
-                    </tbody>
-                    <tfoot>
-                    <tr>
-                        <th>
-                            <ul class="pager">
-                                <li class="previous {{prevButton.hidden == true && 'disabled' || ''}}" ng-if="prevButton.enabled">
-                                    <a ng-click="previousGrantsPage()" ng-if="!prevButton.hidden">Previous</a>
-                                    <span ng-if="prevButton.hidden">Previous</span>
-                                </li>
-                                <li class="next {{nextButton.hidden == true && 'disabled' || ''}}" ng-if="nextButton.enabled">
-                                    <a ng-click="nextGrantsPage()" ng-if="!nextButton.hidden">Next</a>
-                                    <span ng-if="nextButton.hidden">Next</span>
-                                </li>
-                            </ul>
-                        </th>
-                    </tr>
-                    </tfoot>
-                </table>
-            </div>
-        </div>
-        <div class="span5">
-            <div class="row" style="margin-left:0px;margin-top: 5px;margin-right: 0px">
-                <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered table-hover table-condensed">
-                    <thead>
-                    <tr>
-                        <th style="width: 20%" class="named-div">Assigned Users <a ng-click="addRole($scope, $http)">
-                            <i class="User--plus pull-right"></i>
-                        </a> <a ng-click="addRole($scope, $http)">
-                            <i class="Users--plus pull-right"></i>
-                        </a></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="user in selectedRole.users">
-                        <td>{{user.fullname}} ({{user.username}})</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+</div>
