--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/users.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/webapp/app/views/users.html
@@ -1,36 +1,109 @@
 <div class="row subheader-button-area">
+    <script type="text/ng-template" id="addUserDlg.html">
+        <div class="modal-header">
+            <h3>{{dialog.title}}</h3>
+        </div>
+        <div class="modal-body">
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <label for="usernameTxt" class="col-sm-2 control-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="selUser.username" class="form-control" id="usernameTxt" placeholder="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="fullnameTxt" class="col-sm-2 control-label">Fullname</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="selUser.fullname" class="form-control" id="fullnameTxt" placeholder="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="descriptionTxt" class="col-sm-2 control-label">Description</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="selUser.userDetails.description" class="form-control" id="descriptionTxt">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="departmentTxt" class="col-sm-2 control-label">Department</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="selUser.userDetails.department" class="form-control" id="departmentTxt" placeholder="">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="officeTxt" class="col-sm-2 control-label">Office</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="selUser.userDetails.office" class="form-control" id="officeTxt" placeholder="">
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-default" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
+    <script type="text/ng-template" id="uploadDlg.html">
+        <div class="modal-header">
+            <h3>{{dialog.title}}</h3>
+        </div>
+        <div class="modal-body">
+            <form class="form-horizontal" role="form" id="myFile" name="myFile">
+                <div class="form-group">
+                    <label for="filenameTxt" class="col-sm-2 control-label">Filename</label>
+                    <div class="col-sm-10">
+                        <input type="text" ng-model="myModelObj" class="form-control" id="filenameTxt" placeholder="">
+                        <input type="file" ng-file-select="onFileSelect($files)" >
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button class="btn btn-primary" ng-click="ok()">OK</button>
+            <button class="btn btn-default" ng-click="cancel()">Cancel</button>
+        </div>
+    </script>
     <div class="row-fluid">
         <div class=""><h2>User Management</h2></div>
         <div class="button-bar">
-                <a ng-click="addUser($scope, $http)" class="btn">
-                    <img src="images/dialogs/user/User--plus.png" class="pull-left"/>
-                </a>
-                <a ng-click="deleteUser($scope, $http)" class="btn">
-                    <img src="images/dialogs/user/User--minus.png" class="pull-left"/>
-                </a>
-                <a ng-click="saveUser($scope, $http)" class="btn">
-                    <img src="images/dialogs/user/User--save.png" class="pull-left"/>
-                </a>
-                <a ng-click="loadUsers($scope, $http)" class="btn">
-                    <img src="images/core/refresh.png" class="pull-left"/>
-                </a>
-                <a ng-click="changePassword($scope, $http)" class="btn">
-                    <img src="images/dialogs/user/key--edit.png" class="pull-left"/>
-                </a>
-                <a ng-click="changeImage($scope, $http)" class="btn">
-                    <img src="images/dialogs/user/picture--edit.png" class="pull-left"/>
-                </a>
+            <a ng-click="addUser()" class="btn btn-default">
+                <i class="User--plus pull-left"></i>
+            </a>
+            <a ng-click="deleteUser()" class="{{(!oneSelected() && !multipleSelected()) && 'disabled' || ''}} btn btn-default">
+                <i class="User--minus pull-left"></i>
+            </a>
+            <a ng-click="editUser()" class="{{!oneSelected() && 'disabled' || ''}} btn btn-default">
+                <i class="User--pencil pull-left"></i>
+            </a>
+            <a ng-click="saveUser()" class="btn btn-default">
+                <i class="User--save pull-left"></i>
+            </a>
+            <a ng-click="loadUsers()" class="btn btn-default">
+                <i class="refresh pull-left"></i>
+            </a>
+            <a ng-click="changePassword()" class="{{!oneSelected() && 'disabled' || ''}} btn btn-default">
+                <i class="key--edit pull-left"></i>
+            </a>
+            <a  ng-click="changeImage()" class="{{!oneSelected() && 'disabled' || ''}} btn btn-default">
+                <i class="picture--edit pull-left"></i>
+            </a>
+        </div>
+        <form class="form-inline" role="form">
+            <div class="form-group right-inner-addon">
+                <input type="search" class="form-control" chk-users placeholder="Search..." />
+                <span class="glyphicon glyphicon-search form-control-feedback"></span>
             </div>
+        </form>
     </div>
 </div>
 <div class="row">
+    <!--
     <div id="usersListPnl" class="span2" ng-if="userEntities">
         <div class="{{userEntities[$index].id == selectedUser.id && 'users-card-active' || ''}} users-card container-fluid navbar-inner animated bounceInUp"
              ng-repeat="user in userEntities"
              ng-click="selectedCard($index)">
             <div class="users-inner-card row-fluid animated bounceInUp">
                 <div class="span2" ng-if="user.userDetails != null && user.userDetails.image != ''">
-                <img ng-src="data:image;base64,{{user.userDetails.image}}" class="users-user-image">
+                    <img ng-src="data:image;base64,{{user.userDetails.image}}" class="users-user-image">
                 </div>
                 <div class="span2" ng-if="user.userDetails != null && user.userDetails.image == '' && user.userDetails.sex == 'MALE'">
                     <img src="../images/dialogs/user/userDefaultMan.jpg" class="users-user-image">
@@ -38,7 +111,8 @@
                 <div class="span2" ng-if="user.userDetails != null && user.userDetails.image == '' && user.userDetails.sex == 'FEMALE'">
                     <img src="../images/dialogs/user/userDefaultWoman.jpg" class="users-user-image">
                 </div>
-                <div class="span2" ng-if="(user.userDetails == null || user.userDetails.image == '' || user.userDetails.image == null) && user.userDetails.sex == ''">
+                <div class="span2"
+                     ng-if="(user.userDetails == null || user.userDetails.image == '' || user.userDetails.image == null) && user.userDetails.sex == ''">
                     <img src="../images/dialogs/user/userDefaultUniSex.jpg" class="users-user-image">
                 </div>
                 <div class="users-card-key">{{user.username}}</div>
@@ -46,9 +120,35 @@
             </div>
         </div>
     </div>
+    -->
+    <!--div class="gridStyle" ng-grid="gridOptions"></div-->
 
-    <div id="usersDetailsPnl" ng-class="{ 'span10': userEntities != null }" class="navbar-inner">
-        <form ng-controller="UsersCtrl">
+    <div class="container">
+        <div class="">
+            <div class="{{isSelected($index) && 'users-card-active' || ''}} users-card panel-body " style="padding:10px;margin:10px;display: block;float: left" ng-repeat="user in userEntities" ng-click="onClickUserCard($index)">
+                <div class="users-inner-card row-fluid" style="background-color: transparent">
+                    <div class="span2" ng-if="user.userDetails != null && user.userDetails.image != ''">
+                        <img ng-src="{{decode(user.userDetails.image)}}" class="users-user-image" alt="{{user.username}}" title="{{user.username}}">
+                    </div>
+                    <div class="span2" ng-if="user.userDetails != null && user.userDetails.image == '' && user.userDetails.sex == 'MALE'">
+                        <img src="../images/dialogs/user/userDefaultMan.jpg" class="users-user-image" alt="{{user.username}}" title="{{user.username}}">
+                    </div>
+                    <div class="span2" ng-if="user.userDetails != null && user.userDetails.image == '' && user.userDetails.sex == 'FEMALE'">
+                        <img src="../images/dialogs/user/userDefaultWoman.jpg" class="users-user-image" alt="{{user.username}}" title="{{user.username}}">
+                    </div>
+                    <div class="span2"
+                         ng-if="(user.userDetails == null || ((user.userDetails.image == '' || user.userDetails.image == null) && user.userDetails.sex == null))">
+                        <img src="../images/dialogs/user/userDefaultUniSex.jpg" class="users-user-image" alt="{{user.username}}" title="{{user.username}}">
+                    </div>
+                    <div class="users-card-key">{{user.username}}</div>
+                    <div class="users-card-content">{{user.fullname}}</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--
+    <div id="usersDetailsPnl" ng-class="{ 'span10': userEntities != null }" class="navbar-default">
+        <form>
             <div class="row">
                 <div class="span2 users-form-left-col">ID</div>
                 <div class="span10">{{selectedUser.id}}</div>
@@ -110,4 +210,5 @@
             </div>
         </form>
     </div>
+    -->
 </div>
