AJS-27 - AJS: (CORE) Introduce dynamic loading of modules at runtime Fixed Roles Management

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Roles.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Roles.html
@@ -56,13 +56,13 @@
             <a ng-click="addRole()" class="btn btn-default">
                 <i class="Users--plus pull-left"></i>
             </a>
-            <a ng-click="deleteRole($scope, $http)" class="btn btn-default">
+            <a ng-click="deleteRole()" class="btn btn-default">
                 <i class="Users--minus pull-left"></i>
             </a>
-            <a ng-click="saveRole($scope, $http)" class="btn btn-default">
+            <a ng-click="saveRole()" class="btn btn-default">
                 <i class="Users--save pull-left"></i>
             </a>
-            <a ng-click="loadRoles($scope, $http)" class="btn btn-default">
+            <a ng-click="loadRoles()" class="btn btn-default">
                 <i class="refresh pull-left"></i>
             </a>
         </div>
