AJS-27 - AJS: (CORE) Introduce dynamic loading of modules at runtime Fixed Account login

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
@@ -21,12 +21,12 @@
  * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
  */
 -->
-<div id="loginDialog" class="login-dialog modal show fade" data-keyboard="false" data-backdrop="static" role="dialog"
+<div id="loginDialog" class="login-dialog modal show" data-keyboard="false" data-backdrop="static" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="false">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h3>Login</h3>
+                <h3 class="modal-title">Login</h3>
             </div>
             <div class="modal-body">
                 <form ng-submit="login()" class="form-horizontal">
