AJS-27 - AJS: (CORE) Introduce dynamic loading of modules at runtime Fixed Account login

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/tree.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/tree.html
@@ -1,28 +1,19 @@
-<!--
-/*
- * openwms.org, the Open Warehouse Management System.
- * Copyright (C) 2014 Heiko Scherrer
- *
- * This file is part of openwms.org.
- *
- * openwms.org is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of the
- * License, or (at your option) any later version.
- *
- * openwms.org is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with this software. If not, write to the Free Software
- * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
- * 02110-1301 USA, or see the FSF site: http://www.fsf.org.
- */
--->
+<div class="container header-menu navbar container" ui-view="header-view" />
 <!-- Menu Tree Pane -->
 <div class="span2 navbar-inner" ui-view="menu-view" ng-animate="{enter:'fade-enter'}"></div>
+
+<toaster-container
+        toaster-options="{
+            'positionClass': 'toast-top-left',
+            'showDuration': '10000',
+            'hideDuration': '10000',
+            'timeOut': '10000',
+            'extendedTimeOut': '10000',
+            'showEasing': 'swing',
+            'hideEasing': 'linear',
+            'showMethod': 'fadeIn',
+            'hideMethod': 'fadeOut'}">
+</toaster-container>
 
 <!-- Content Pane -->
 <div class="span10" ui-view="content-view"></div>
