ST-118 minor changes on AJS client

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Users.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Users.html
@@ -67,7 +67,7 @@
         </div>
     </script>
     <div class="row-fluid">
-        <div class=""><h2>User Management</h2></div>
+        <div class=""><h2></h2></div>
         <div class="button-bar">
             <a ng-click="addUser()" class="btn btn-default" title="Add a new User ...">
                 <i class="User--plus pull-left"></i>
