- added support for Polymer - replaces some hardcoded urls with constants to be overridden by projects - CoreService now uses a `ResponsedataResolver` to translate server responses; added a default implementation - fixed layout issue on Login screen - removed duplicate header-view div

--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/main.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/main.html
@@ -1,10 +1,4 @@
-<!--
-    MAIN
--->
-<div class="container">
-    <div class="header-area navbar-default "></div>
-</div>
-<div class="container header-menu navbar container" ui-view="header-view" />
+<div class="container header-menu" ui-view="header-view"></div>
 <div class="container">
     <div class="content-area row">
         <div ui-view/>
