--- a/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
+++ b/org.openwms.app/org.openwms.client.angularjs.app/src/main/ajs/app/views/Login.html
@@ -10,18 +10,18 @@
                     <div ng-show="message">
                         <p class="text-error" ng-bind="message"></p>
                     </div>
-                    <div class="control-group">
-                        <label class="control-label" for="usernameTxt">Username</label>
+                    <div class="form-group form-group-lg">
+                        <label class="col-sm-2 control-label" for="usernameTxt">Username</label>
 
-                        <div class="controls">
-                            <input id="usernameTxt" type="text" placeholder="Username" ng-model="user.username"/>
+                        <div class="col-sm-10">
+                            <input id="usernameTxt" class="form-control" type="text" placeholder="Username" ng-model="user.username"/>
                         </div>
                     </div>
-                    <div class="control-group">
-                        <label class="control-label" for="passwordTxt">Password</label>
+                    <div class="form-group form-group-lg">
+                        <label class="col-sm-2 control-label" for="passwordTxt">Password</label>
 
-                        <div class="controls">
-                            <input id="passwordTxt" type="text" placeholder="Password" ng-model="user.password"/>
+                        <div class="col-sm-10">
+                            <input id="passwordTxt" class="form-control" type="text" placeholder="Password" ng-model="user.password"/>
                         </div>
                     </div>
                     <div class="control-group">
